--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,195 @@
-comfyui-frontend-package==1.10.17
-torch
-torchsde
-torchvision
-torchaudio
-numpy>=1.25.0
-einops
-transformers>=4.28.1
-tokenizers>=0.13.3
-sentencepiece
-safetensors>=0.4.2
-aiohttp>=3.11.8
-yarl>=1.18.0
-pyyaml
-Pillow
-scipy
-tqdm
-psutil
-
-#non essential dependencies:
-kornia>=0.7.1
-spandrel
-soundfile
-av
+aiohappyeyeballs==2.5.0
+aiohttp==3.11.13
+aiosignal==1.3.1
+anyio==4.2.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.4.1
+async-lru==2.0.4
+async-timeout==4.0.3
+attrs==23.2.0
+av==14.2.0
+Babel==2.14.0
+beautifulsoup4==4.12.3
+black==25.1.0
+bleach==6.1.0
+certifi==2022.12.7
+cffi==1.16.0
+chardet==5.2.0
+charset-normalizer==2.1.1
+click==8.1.8
+cmake==3.25.0
+comfyui_frontend_package==1.10.17
+comm==0.2.1
+cryptography==44.0.2
+debugpy==1.8.0
+decorator==5.1.1
+defusedxml==0.7.1
+Deprecated==1.2.18
+einops==0.7.0
+entrypoints==0.4
+exceptiongroup==1.2.0
+executing==2.0.1
+fastjsonschema==2.19.1
+filelock==3.9.0
+fqdn==1.5.1
+frozenlist==1.4.1
+fsspec==2024.2.0
+gdown==5.1.0
+gitdb==4.0.11
+GitPython==3.1.41
+h11==0.14.0
+httpcore==1.0.2
+httpx==0.26.0
+huggingface-hub==0.20.3
+idna==3.4
+ipykernel==6.29.1
+ipython==8.21.0
+ipython-genutils==0.2.0
+ipywidgets==8.1.1
+isoduration==20.11.0
+jedi==0.19.1
+Jinja2==3.1.2
+json5==0.9.14
+jsonpointer==2.4
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+jupyter-archive==3.4.0
+jupyter_client==7.4.9
+jupyter_contrib_core==0.4.2
+jupyter_contrib_nbextensions==0.7.0
+jupyter_core==5.7.1
+jupyter-events==0.9.0
+jupyter-highlight-selected-word==0.2.0
+jupyter-lsp==2.2.2
+jupyter-nbextensions-configurator==0.6.3
+jupyter_server==2.12.5
+jupyter_server_terminals==0.5.2
+jupyterlab==4.1.0
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.25.2
+jupyterlab-widgets==3.0.9
+kornia==0.8.0
+kornia_rs==0.1.8
+lit==15.0.7
+lxml==5.1.0
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+matplotlib-inline==0.1.6
+matrix-client==0.4.0
+mdurl==0.1.2
+mistune==3.0.2
+mpmath==1.3.0
+multidict==6.0.5
+mypy-extensions==1.0.0
+nbclassic==1.0.0
+nbclient==0.9.0
+nbconvert==7.15.0
+nbformat==5.9.2
+nest-asyncio==1.6.0
+networkx==3.2.1
+notebook==6.5.5
+notebook_shim==0.2.3
+numpy==1.26.3
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu11==10.9.0.58
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu11==10.2.10.91
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-cusparselt-cu12==0.6.2
+nvidia-nccl-cu11==2.14.3
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu11==11.7.91
+nvidia-nvtx-cu12==12.4.127
+overrides==7.7.0
+packaging==23.2
+pandocfilters==1.5.1
+parso==0.8.3
+pathspec==0.12.1
+pexpect==4.9.0
+piexif==1.1.3
+pillow==10.2.0
+pip==24.0
+platformdirs==4.2.0
+prometheus-client==0.19.0
+prompt-toolkit==3.0.43
+propcache==0.3.0
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycparser==2.21
+PyGithub==2.6.1
+Pygments==2.17.2
+PyJWT==2.10.1
+PyNaCl==1.5.0
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-json-logger==2.0.7
+PyYAML==6.0.1
+pyzmq==24.0.1
+referencing==0.33.0
+regex==2023.12.25
+requests==2.31.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.9.4
+rpds-py==0.17.1
+safetensors==0.4.2
+scipy==1.12.0
+Send2Trash==1.8.2
+sentencepiece==0.2.0
+setuptools==69.0.3
+shellingham==1.5.4
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.0
+soundfile==0.13.1
+soupsieve==2.5
+spandrel==0.4.1
+stack-data==0.6.3
+sympy==1.13.1
+terminado==0.18.0
+tinycss2==1.2.1
+tokenizers==0.15.1
+toml==0.10.2
+tomli==2.0.1
+torch==2.5.1
+torchaudio==2.5.1
+torchsde==0.2.6
+torchvision==0.20.1
+tornado==6.4
+tqdm==4.66.1
+traitlets==5.14.1
+trampoline==0.1.2
+transformers==4.37.2
+triton==3.1.0
+typer==0.15.2
+types-python-dateutil==2.8.19.20240106
+typing_extensions==4.12.2
+uri-template==1.3.0
+urllib3==1.26.13
+uv==0.6.4
+wcwidth==0.2.13
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.7.0
+wheel==0.42.0
+widgetsnbextension==4.0.9
+wrapt==1.17.2
+xformers==0.0.29
+yarl==1.18.3
